--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
+  "favicon": "https://www.jobcher.com/bear2.png.webp",
   "homeUrl": "https://nav.jobcher.com",
   "language": "zh-CN",
   "loading": "random",
