rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "favicon": "https://www.jobcher.com/bear2.png.webp",
+  "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav.jobcher.com",
   "language": "zh-CN",
   "loading": "random",
@@ -7,7 +7,7 @@
   "title": "JOB导航 - 精选实用导航网站",
   "description": "JOB导航 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,人工智能,福利",
-  "theme": "Side",
+  "theme": "Sim",
   "appTheme": "App",
   "footerContent": "<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright © 2023-2025 jobcher.com, All Rights Reserved</div>",
   "iconfontUrl": "//at.alicdn.com/t/font_2522843_wl70o31sy6.js",
@@ -21,7 +21,13 @@
       "height": null
     },
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jobcher/blog@master/static/images/wallpaper/2023-07-21.jpg.webp",
+      "url": "",
+      "width": null,
+      "height": null
+    },
+    {
+      "src": "https://cdn.jsdelivr.net/gh/jobcher/blog@master/static/images/wallpaper/2023-07-20.jpg.webp",
       "url": "",
       "width": null,
       "height": null
@@ -32,13 +38,13 @@
   "simThemeAutoplay": true,
   "sideThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jobcher/blog@master/static/images/wallpaper/2023-07-21.jpg.webp",
       "url": "",
       "width": null,
       "height": null
     },
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/sim-wallpaper.jpg",
+      "src": "https://cdn.jsdelivr.net/gh/jobcher/blog@master/static/images/wallpaper/2023-07-20.jpg.webp",
       "url": "",
       "width": null,
       "height": null
@@ -49,13 +55,13 @@
   "shortcutThemeShowWeather": true,
   "shortcutThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637462542538-0ed801fb13f9e4c29cdfface91eb6c44.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jobcher/blog@master/static/images/wallpaper/2023-07-20.jpg.webp",
       "url": "",
       "width": null,
       "height": null
     }
   ],
   "showLanguage": false,
-  "showRate": false,
+  "showRate": true,
   "mirrorList": []
 }
